2006-11-06  Jb Evain  <jbevain@gmail.com>

	* Makefile, monomerge.exe.sources:
		Compilation stuff for Mono.

	* First check-in of the merging tool by:
		Alex Prudiky  <prudkiy@gmail.com>