@@ -1,3 +1,8 @@
+2006-11-30  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Merge/ReflectionMerger.cs:
+		Fix a bug in merging nested nested types.
+
 2006-11-06  Jb Evain  <jbevain@gmail.com>
 
 	* Makefile, monomerge.exe.sources:
